unpackaged/main/default/objects/Assignment_Groups__c/Assignment_Groups__c.object-meta.xml
<CustomObject>
    <description>Used to assign ownership of records users via Apex</description>
    <label>zz Assignment Group Member</label>
    <nameField>
        <displayFormat>AG-{0000}</displayFormat>
        <label>Assignment Group Member No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>zz Assignment Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>