unpackaged/main/default/objects/Assignment_Groups__c/fields/AssignmentVariable__c.field-meta.xml
<CustomField>
    <fullName>AssignmentVariable__c</fullName>
    <description>used to handle assignment of Variables via the round robin</description>
    <label>Assignment Variable</label>
    <length>50</length>
    <type>Text</type>
</CustomField>