unpackaged/main/default/objects/Assignment_Groups__c/fields/End_At__c.field-meta.xml
<CustomField>
    <fullName>End_At__c</fullName>
    <label>End At</label>
    <type>DateTime</type>
</CustomField>