unpackaged/main/default/objects/Assignment_Groups__c/fields/Group_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Group_Name_Formula__c</fullName>
    <description>Formula</description>
    <formula>Group_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Name Formula</label>
    <type>Text</type>
</CustomField>