unpackaged/main/default/objects/Assignment_Groups__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>IF(
    (
        User_Is_Active__c = FALSE ||
        Is_Paused__c = TRUE ||
        Start_At__c &gt; NOW() ||
        End_At__c &lt; NOW()
    ),
    FALSE,
    TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>