unpackaged/main/default/objects/Assignment_Groups__c/fields/Is_Paused__c.field-meta.xml
<CustomField>
    <fullName>Is_Paused__c</fullName>
    <formula>IF(
    (
        ISBLANK(Pause_Start_At__c) ||
        Pause_End_At__c &lt; NOW() 
    ),
    FALSE,
    TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Paused</label>
    <type>Checkbox</type>
</CustomField>