unpackaged/main/default/objects/Assignment_Groups__c/fields/Last_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Last time case was assigned to this person.
Updated per Biz Sys Details: R164188</description>
    <inlineHelpText>Last time case was assigned to this person</inlineHelpText>
    <label>Last Assignment</label>
    <type>DateTime</type>
</CustomField>