unpackaged/main/default/objects/Assignment_Groups__c/fields/Minimum_Units_Managed__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Units_Managed__c</fullName>
    <defaultValue>If(true , 0, 0)</defaultValue>
    <label>Minimum Units Managed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>