unpackaged/main/default/objects/Assignment_Groups__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added lookup filter for R1916987</description>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notContain</operation>
            <value>HelpCenter, Communit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N30000002Yj6ZEAS</relationshipName>
    <type>Lookup</type>
</CustomField>